--- a/client-app/package.json
+++ b/client-app/package.json
@@ -11,7 +11,7 @@
     "@types/react": "^17.0.19",
     "@types/react-calendar": "^3.4.3",
     "@types/react-dom": "^17.0.9",
-    "axios": "^0.21.1",
+    "axios": "^0.21.4",
     "mobx": "^6.3.3",
     "mobx-react-lite": "^3.2.1",
     "react": "^17.0.2",
@@ -19,6 +19,7 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-toastify": "^8.0.2",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
     "typescript": "^4.3.5",
